# example-axum-userdb-rs

./: Cargo.toml  README.md  config.yaml
src/: config.rs  main.rs
src/models/: user.rs
src/my_mod/: traits.rs
src/persistence/: driver_trait.rs  error.rs  mod.rs
src/persistence/driver/: in_memory.rs  mod.rs  postgres.rs
src/restapi/: mod.rs  user.rs
src/restapi/input/: validation.rs
src/services/: error.rs  mod.rs  user_service.rs
